@startuml
class Book{
    -String sign
    -LocalDate publishDate
    -int price

    +LocalDate getPublishDate()
    +int getPrice()
}

class Member{
    -String name
    -int rentalAmount

    +int getRentalAmount()
    +void rentBook(ArrayList<Book> books, DiscountStrategy discountStrategy)
}

interface DiscountStrategy{
    + int discount(ArrayList<Book> books, Member member)
}

class OldBookDiscount{
    + int discount(ArrayList<Book> books, Member member)
}

class MemberDiscount{
    + int discount(ArrayList<Book> books, Member member)
}
DiscountStrategy ..> Book
DiscountStrategy ..> Member
Member ..> Book
Member ..> DiscountStrategy
DiscountStrategy <|.. OldBookDiscount
DiscountStrategy <|.. MemberDiscount

@enduml